# librepods

android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/kavishdevar/librepods/: MainActivity.kt
android/app/src/main/java/me/kavishdevar/librepods/composables/: AudioSettings.kt  CallControlSettings.kt  NavigationButton.kt  StyledScaffold.kt  StyledSelectList.kt  StyledSlider.kt
android/app/src/main/java/me/kavishdevar/librepods/screens/: AccessibilitySettingsScreen.kt  AirPodsSettingsScreen.kt  AppSettingsScreen.kt  Onboarding.kt  OpenSourceLicensesScreen.kt  PressAndHoldSettingsScreen.kt
android/app/src/main/java/me/kavishdevar/librepods/services/: AirPodsService.kt  AppListenerService.kt
android/app/src/main/java/me/kavishdevar/librepods/utils/: LogCollector.kt  RadareOffsetFinder.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: app_listener_service_config.xml
linux-rust/: Cargo.toml
linux-rust/assets/: me.kavishdevar.librepods.desktop
linux-rust/src/bluetooth/: aacp.rs  mod.rs
