[package]
name = "librepods-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
bluer = { version = "0.17.4", features = ["full"] }
env_logger = {version = "0.11.8", features = ["auto-color"]}
uuid = "1.18.1"
log = "0.4.28"
dbus = "0.9.9"
hex = "0.4.3"
# iced = {version = "0.13.1", features = ["tokio", "auto-detect-theme"]}
libpulse-binding = "2.30.1"
ksni = "0.3.1"
image = "0.25.8"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true